07-es-transfer-kafka-websocket/deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transfer
  labels:
    app: transfer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transfer
  template:
    metadata:
      labels:
        app: transfer
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: transfer
          image: kyoungduk/transfer:1.0.5
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
          volumeMounts:
            - name: tz-config
              mountPath: /etc/localtime
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Seoul
  strategy:
    type: RollingUpdate
