07-es-transfer-kafka-websocket/deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: transfer
  labels:
    app: transfer
  annotations:
    prometheus.io/path: /actuator/prometheus
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: transfer
  type: ClusterIP
